# agendalo

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/database/: connection.py
app/domain/: models.py  schemas.py
app/repositories/: interfaces.py  sqlite_repositories.py
app/schedulers/: interfaces.py  or_tools_scheduler.py
app/services/: agenda_service.py  availability_hours_service.py  business_service_hours_service.py  calendar_service.py  person_service.py  role_service.py  working_hours_service.py
modules/frontend/: package-lock.json  package.json
modules/main_backend/: config.py  main.py  pyproject.toml
modules/main_backend/api/: dependencies.py
modules/main_backend/api/routes/: agendas.py  availability_hours.py  business_service_hours.py  calendar.py  people.py  roles.py
modules/main_backend/database/: connection.py  seeds.py
modules/main_backend/domain/: schemas.py
modules/main_backend/repositories/: interfaces.py  sqlite_repositories.py
modules/main_backend/services/: agenda_service.py  business_service_hours_service.py  calendar_service.py  person_service.py  role_service.py  scheduler_adapter.py  working_hours_service.py
modules/main_backend/tests/integration/: test_agendas_api.py  test_availability_hours_api.py  test_business_service_hours_api.py  test_roles_api.py
modules/scheduler/: __init__.py  interfaces.py  models.py  or_tools_scheduler.py  pyproject.toml
modules/scheduler/tests/unit/: test_or_tools_scheduler.py
tests/: conftest.py
tests/integration/: test_calendar_api.py  test_people_api.py  test_working_hours_api.py
(+47 files in other folders)
