[project]
name = "agendalo-main-backend"
version = "1.0.0"
description = "Main backend API for calendar management"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "email-validator>=2.0.0",
    "agendalo-scheduler @ file:///home/diego/apps/personal/agendalo/modules/scheduler",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules.main_backend"]

[tool.hatch.metadata]
allow-direct-references = true

