[project]
name = "agendalo-scheduler"
version = "1.0.0"
description = "Scheduler module using OR-tools for optimization"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.8.0",
    "pytest==7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules.scheduler"]

